clusters/proxmox-home/directus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: directus
  labels:
    app.kubernetes.io/name: directus 
    app.kubernetes.io/component: namespace
