clusters/proxmox-home/directus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: directus
  name: directus-ingress
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: directus-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - directus.mgsds.com
    secretName: directus.mgsds.com-tls
  rules:
  - host: directus.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: directus
            port:
              number: 8055
